Re-structured repository structure for Non-IDEs